# foldops

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: rust.yml
apps/agent/: .env.example  README.md  package.json
apps/agent/scripts/: diagnose.mjs
apps/agent/src/: agent-http.ts  collector.ts  control-actions.ts  fah-client-db.ts  fah-control.ts  fah-log.ts  fah-status.ts  fah-websocket.ts  fah-work-log.ts  index.ts  log-tail.ts  node-control.ts  run-update.ts  temperatures.ts
apps/agent/systemd/: foldops-agent.service
apps/supervisor/: .env.example  package.json
apps/supervisor/src/: agent-control.ts  agent-logs.ts  agent-update.ts  db.ts  deploy-db.ts  deploy.ts  fah-projects.ts  routes.ts  server.ts
apps/supervisor/src/alerts/: db.ts  engine.ts  evaluate.ts  notify.ts  stuck.ts  types.ts
apps/supervisor/systemd/: foldops-supervisor.service
apps/supervisor/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/supervisor/web/src/: App.tsx  api.ts  fahProject.ts  fahStats.ts  history.ts  index.css  kiosk.css  types.ts  vite-env.d.ts
apps/supervisor/web/src/components/: AlertBanner.tsx  CompactAgentTile.tsx  FahStatsLinks.tsx  HistoryChart.tsx  LogViewer.tsx  MachineCard.tsx  MachineControlsPanel.tsx  MachineLogsPanel.tsx  PageLayout.tsx  ProjectInfoPanel.tsx  Tabs.tsx  TempGauge.tsx
apps/supervisor/web/src/pages/: AlertHistory.tsx  Dashboard.tsx  Deploy.tsx  KioskHome.tsx  MachineDetail.tsx
apps/supervisor/web/src/utils/: alerts.ts  format.ts
crates/foldops-agent/: Cargo.toml
crates/foldops-agent/src/: collector.rs  config.rs  ingest.rs  log_tail.rs  main.rs  node_control.rs  temperatures.rs  update.rs
crates/foldops-agent/src/fah/: client_db.rs  control.rs  log.rs  mod.rs  state.rs  status.rs  websocket.rs  work_log.rs
crates/foldops-agent/src/http/: mod.rs  server.rs
crates/foldops-supervisor/: Cargo.toml
crates/foldops-supervisor/src/: config.rs  db.rs  fah_projects.rs  main.rs
crates/foldops-supervisor/src/agent/: control.rs  logs.rs  mod.rs  update.rs
crates/foldops-supervisor/src/alerts/: db.rs  engine.rs  evaluate.rs  mod.rs  notify.rs  stuck.rs  types.rs
crates/foldops-supervisor/src/api/: mod.rs  routes.rs
crates/foldops-supervisor/src/deploy/: db.rs  job.rs  mod.rs
crates/foldops-types/: Cargo.toml
crates/foldops-types/src/: control.rs  ingest.rs  lib.rs  validate.rs
crates/foldops-types/tests/: contract.rs
docs/: README.md  agent.md  alerts.md  api.md  architecture.md  configuration.md  database.md  folding-os.md  installation.md  roadmap.md  rust-migration.md
packaging/deb/: README.md  distributions.example  foldops-archive-keyring.gpg  signing-key.env.example
packaging/deb/foldops-agent/: postinst  prerm
packaging/deb/foldops-supervisor/: postinst  prerm
packaging/folding-os/: README.md
packaging/folding-os/buildroot/: Config.in  foldops-common.mk
packaging/folding-os/buildroot/foldops-agent/: Config.in  foldops-agent.mk
packaging/folding-os/buildroot/foldops-supervisor/: Config.in  foldops-supervisor.mk
packaging/folding-os/env/: agent.env.example  supervisor.env.example
packaging/folding-os/sysusers.d/: foldops.conf
packaging/folding-os/tmpfiles.d/: foldops.conf
scripts/: build-agent.sh  build-apt-repo-signed.sh  build-apt-repo.sh  build-debs.sh  build-folding-os-artifacts.sh  build-supervisor.sh  check-rust-prereqs.sh  diagnose-log-pull.mjs  export-apt-signing-key.sh  foldops-apt-signing-key.sh  update-agent.sh  upload-apt-repo-r2.sh  vendor-rust-deps.sh
systemd/rust/: foldops-agent.service  foldops-supervisor.service
tests/contract/: README.md
tests/contract/fixtures/: ingest-minimal.json
