[workspace]
resolver = "2"
members = [
    "crates/foldops-types",
    "crates/foldops-agent",
    "crates/foldops-supervisor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pacificnm/foldops"
rust-version = "1.85"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
hostname = "0.4"
dotenvy = "0.15"
foldops-types = { path = "crates/foldops-types" }
uuid = { version = "1", features = ["v4"] }
