[package]
name = "foldops-agent"
description = "FoldOps metrics collector for Folding@home nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "foldops-agent"
path = "src/main.rs"

[dependencies]
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
foldops-types.workspace = true
futures-util.workspace = true
hostname.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
