[package]
name = "foldops-supervisor"
description = "FoldOps supervisor API, SQLite store, and dashboard server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "foldops-supervisor"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["macros"] }
chrono.workspace = true
dotenvy.workspace = true
foldops-types.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
